[package]
name = "speng-seedloc"
version = "1.1.0"
edition = "2021"

[dependencies]
aligned = "0.4.1"
bytemuck = { version = "1.13.1", features = ["min_const_generics"] }
fixed = "1.23.0"
once_cell = "1.17.1"
rand = "0.8.5"
sysinfo = "0.28.4"

[dependencies.windows]
version = "0.46.0"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
]
